--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Servidor  rest node js",
     "main": "index.js",
     "scripts": {
-        "start": "node /server/server.js",
+        "start": "node server/server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Cesareus",
